# hpc-release-system

./: .gitattributes  .gitignore  CUTOVER.md  CUTOVER_CICD_APP_REQUESTS.md  README.md  hpc_app.csv  index.html  jira.conf.example  jira_test.py  ldap.conf_demo  pyproject.toml  pytest.ini  qa_llm.env.example  release_process_owner_manager.md  release_system_demo.db  release_system_plan.md  requirements.txt  server.py
.agents/: features_brief.md  followups_brief.md  phase2_brief.md  phase3_brief.md  phase4_brief.md  polish_brief.md  redesign_brief.md
app/: __init__.py  config.py  deps.py  identity.py  main.py  timeutil.py
demo_init_csv/: get_release_report_test_cmd.py  hpc_app.csv
release_system/: __init__.py  core.py  jira_client.py  llm.py
test_data/: HPC_Summary_3.7.0.x.xlsx  hpc_app.csv  release_report.csv
tests/: __init__.py  conftest.py  ldap_group_test.py  static_checks.ps1  test_admin_service.py  test_app_permissions.py  test_app_service_app_info_fetch.py  test_cicd_app_identity_canonical.py  test_cicd_ruling_bc.py  test_cicd_ruling_da.py  test_cicd_wave3.py  test_cicd_wave3_1.py  test_cicd_wave4_e2e.py  test_core.py  test_decision_sync.py  test_manager_review_service.py  test_phase_policy.py  test_qa_log_database_storage.py  test_qa_release_note_service.py  test_repositories.py  test_wiki_beijing.py
tools/: check_cicd_app_links.py  identity_resolver.py  migrate_cicd_requests_to_apps.py  migrate_db.py
web/: README-web.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  (+2 more)
(+183 files in other folders)
