[project]
name = "hpc-release-system"
version = "0.1.0"
description = "HPC App 发布信息协作系统 — FastAPI 重写"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "ldap3",
    "openpyxl",
    "openai",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "B008",  # do not perform function calls in default arguments (FastAPI Depends pattern)
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
# Not strict-everywhere yet — tighten per-module as Phase N progresses.
